--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^4.4.0"
+    "astro": "^4.4.0",
+    "tailwindcss": "^3.4.1"
   }
 }
