--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^4.4.0",
-    "tailwindcss": "^3.4.1"
+    "astro": "^4.4.0"
   }
 }
