--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
-    "astro": "^4.11.3"
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.0.0-alpha.23",
+    "astro": "^4.15.4",
+    "tailwindcss": "^4.0.0-alpha.23"
   }
 }
