--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lexington/starter",
+  "name": "@lexington/astrosaas",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0-alpha.23",
-    "astro": "^4.15.4",
+    "astro": "^5.1.6",
     "tailwindcss": "^4.0.0-alpha.23"
   }
 }
