--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "@tailwindcss/vite": "^4.0.0-alpha.23",
     "astro": "^5.1.6",
     "tailwindcss": "^4.0.0-alpha.23"
+  },
+  "dependencies": {
+    "@astrojs/react": "^4.2.0",
+    "lucide-react": "^0.474.0"
   }
 }
