added contact form with Google reCAPTCHA
added contact form with Google reCAPTCHA that sends a POST request to GCP Cloud Function with token, the function verifies token and sends email from our no-reply address to our contact address.

added buttons to navbar

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
+        env:
+          PUBLIC_RECAPTCHA_SITE_KEY: ${{ secrets.PUBLIC_RECAPTCHA_SITE_KEY }}
+          PUBLIC_CONTACT_API_ENDPOINT: ${{ secrets.PUBLIC_CONTACT_API_ENDPOINT }}
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
